# clockodo-mcp-server

./: .dockle-ignore  .env.example  .gitignore  .gitmodules  .pylintrc  .trivyignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  SECURITY.md  docker-compose.test.yml  docker-compose.yml  makefile  pyproject.toml  setup.cfg
.claude/: instructions.md
.github/workflows/: docker-publish.yml  security-scan-scheduled.yml  test.yml
.junie/: guidelines.md
manual-test/: JUPYTER_TESTING.md  test_clockodo.ipynb
requirements/: dev.in  dev.txt
src/clockodo_mcp/: __init__.py  client.py  config.py  date_utils.py  hr_analyzer.py  prompts.py  resources.py  server.py
src/clockodo_mcp/models/: __init__.py
src/clockodo_mcp/services/: __init__.py  hr_service.py  team_leader_service.py  user_service.py
src/clockodo_mcp/tools/: __init__.py  debug_tools.py  hr_tools.py  team_leader_tools.py  user_tools.py
tests/: test_client.py  test_client_endpoints.py  test_client_normalization.py  test_client_user_ops.py  test_client_versions.py  test_config.py  test_config_roles.py  test_date_utils.py  test_hr_analyzer.py  test_hr_service.py  test_projects.py  test_prompts.py  test_resources.py  test_server.py  test_server_config.py  test_server_prompts_resources.py  test_server_tools.py  test_team_leader_service.py  test_team_leader_tools.py  test_user_service.py
