[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clockodo-mcp"
dynamic = ["version"]
description = "MCP server wrapper for Clockodo API"
authors = [
  { name = "Clockodo MCP", email = "devnull@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27",
  "pydantic>=2.8",
]

[project.scripts]
clockodo-mcp = "clockodo_mcp.server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.1",
  "ruff>=0.6.0",
  "black>=24.3.0",
  "mypy>=1.10.0",
  "pylint>=3.2.0",
  "pip-tools>=7.4.0",
  "python-dotenv",
  "setuptools-scm>=8.0",
]

[tool.setuptools_scm]
version_file = "src/clockodo_mcp/_version.py"

[tool.black]
line-length = 88
extend-exclude = 'src/clockodo_mcp/_version\.py'

[tool.isort]
profile = "black"
line_length = 88
extend_skip = ["src/clockodo_mcp/_version.py"]

[tool.ruff]
line-length = 88
extend-exclude = ["src/clockodo_mcp/_version.py"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
